Fixed even more styles causing weirdness on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ main{
     padding: 0;
     margin-bottom: 5px;
     border-radius: 25%;
+    min-width:261px ;
 }
 #shopping-list-header {
     width: 80%;
@@ -40,6 +41,7 @@ main{
     padding: 0;
     background-color: aqua;
     border-radius: 10px;
+    min-width:261px ;
     
 }
 #shopping-list{
@@ -78,6 +80,7 @@ li{
     width: 50vw;
     margin-top: 5px;
     border-radius: 10px;
+    min-width:261px ;
 }
 #TaxRate{
     width: 80%;
@@ -108,6 +111,7 @@ li{
     background-color: aquamarine;
     margin-top: 5px;
     border-radius: 10px;
+    min-width:261px ;
 }
 .data-buttons {
     width: 40%;
